# x86OS

./: .gitignore  CMakeLists.txt  README.md
image/: .gitignore
newlib/i686-elf/include/sys/: types.h
script/: img-write-linux.sh  img-write-osx.sh  img-write-win.bat  qemu-debug-linux.sh  qemu-debug-osx.sh  qemu-debug-win.bat
source/applib/: CMakeLists.txt  crt0.S  cstart.c  lib_syscall.c  lib_syscall.h  lib_syscall_t.h
source/boot/: CMakeLists.txt  boot.c  boot.h  boot_start.S  start.S
source/common/: boot_info.h  cpu_instr.h  elf.h  macros.h  types.h
source/init/: CMakeLists.txt  init.c  init.h
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: memory.c  syscall.S  syscall.c  task.S  task.c
source/kernel/cpu/: cpu.c  irq.S  irq.c  mmu.c
source/kernel/dev/: console.c  dev.c  disk.c  kbd.c  time.c  timer.c  tty.c
source/kernel/fs/: file.c  fs.c
source/kernel/fs/devfs/: devfs.c
source/kernel/fs/fat16fs/: fatfs16.c
source/kernel/include/: os_cfg.h
source/kernel/include/core/: memory.h  memory_t.h  syscall.h  syscall_t.h  task.h  task_t.h
source/kernel/include/cpu/: cpu.h  cpu_t.h  irq.h  irq_t.h  mmu.h  mmu_t.h
source/kernel/include/dev/: console.h  console_t.h  dev.h  dev_t.h  disk.h  disk_t.h  kbd.h  kbd_t.h  time.h  time_t.h  timer.h  timer_t.h  tty.h  tty_t.h
source/kernel/include/fs/: file.h  file_t.h  fs.h  fs_t.h
source/kernel/include/fs/devfs/: devfs.h  devfs_t.h
source/kernel/include/fs/fat16fs/: fat16fs.h  fat16fs_t.h
source/kernel/include/ipc/: mutex.h  mutex_t.h  sem.h  sem_t.h
source/kernel/include/sys/: syscall.h  syscall_t.h
source/kernel/include/tools/: bitmap.h  bitmap_t.h  klib.h  list.h  list_t.h  log.h  log_t.h  rbtree.h  rbtree_t.h  time.h  time_t.h
source/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  init_start.S  kernel_start.S  lib_syscall.c  start.S
source/kernel/ipc/: mutex.c  sem.c
source/kernel/sys/: close.c  closedir.c  dup.c  execve.c  exit.c  fork.c  fstat.c  getpid.c  gettimeofday.c  ioctl.c  isatty.c  lseek.c  open.c  opendir.c  read.c  readdir.c  sbrk.c  sleep.c  syscall.c  unlink.c  wait.c  write.c  yield.c
source/kernel/tools/: bitmap.c  klib.c  list.c  log.c  rbtree.c  time.c
source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_16.h  loader_32.c  loader_32.h  loader_start.S  start.S
source/loop/: CMakeLists.txt  loop.c  loop.h
source/shell/: CMakeLists.txt  main.c  shell.c  shell.h
source/shell/cmd/: clear.c  cp.c  date.c  echo.c  help.c  less.c  ls.c  quit.c  rm.c
source/shell/include/: cmd.h  macros.h  shell.h  shell_t.h
source/snake/: CMakeLists.txt  snake.c  snake.h
